--- a/rails_best_practices_output.html
+++ b/rails_best_practices_output.html
@@ -57,7 +57,7 @@
       to see more useful Rails Best Practices.
     </p>
     <p>
-        Found 25 warnings.
+        Found 27 warnings.
     </p>
     <table>
           <tr>
@@ -156,6 +156,24 @@
             <td class='line'>208</td>
             <td class='message'>
               <a href='http://rails-bestpractices.com/posts/7-move-model-logic-into-the-model' target='_blank'>move model logic into model (booking use_count > 4)</a>
+            </td>
+          </tr>
+          <tr class="MoveModelLogicIntoModelReview">
+            <td class='filename'>
+                <a href='subl://open?url=file:///Users/amolchaukade/src/eSpace_app/app/controllers/messages_controller.rb&amp;line=93'>app/controllers/messages_controller.rb</a>
+            </td>
+            <td class='line'>93</td>
+            <td class='message'>
+              <a href='http://rails-bestpractices.com/posts/7-move-model-logic-into-the-model' target='_blank'>move model logic into model (@messages_sender use_count > 4)</a>
+            </td>
+          </tr>
+          <tr class="MoveModelLogicIntoModelReview">
+            <td class='filename'>
+                <a href='subl://open?url=file:///Users/amolchaukade/src/eSpace_app/app/controllers/messages_controller.rb&amp;line=93'>app/controllers/messages_controller.rb</a>
+            </td>
+            <td class='line'>93</td>
+            <td class='message'>
+              <a href='http://rails-bestpractices.com/posts/7-move-model-logic-into-the-model' target='_blank'>move model logic into model (@messages_receiver use_count > 4)</a>
             </td>
           </tr>
           <tr class="MoveModelLogicIntoModelReview">
